Extensiones de la actividad: Uso de CSS

--- a/mis_peliculas.html
+++ b/mis_peliculas.html
@@ -2,6 +2,22 @@
 <html>
     <head>
         <title>Mis 3 películas favoritas.</title>
+
+        <style>
+            img {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .trailer {
+                text-align: center;
+            }
+
+            body {
+                background-color:whitesmoke;
+            }
+        </style>
     </head>
 
     <body>
@@ -15,7 +31,9 @@
                 <p>Me gusta los plot twist que tiene, que tiene significado, y que habla del tiempo.</p>
                 <img src="https://m.media-amazon.com/images/M/MV5BYzdjMDAxZGItMjI2My00ODA1LTlkNzItOWFjMDU5ZDJlYWY3XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Póster de la película Interstellar" width="200px">
                 <br>
-                <a href="https://youtu.be/2LqzF5WauAw?si=wylfcG3Jm4ioGNXh" target="_blank" title="Interstellar Tráiler">Ver Tráiler<a>
+                <div class="trailer">
+                    <a href="https://youtu.be/2LqzF5WauAw?si=wylfcG3Jm4ioGNXh" target="_blank" title="Interstellar Tráiler">Ver Tráiler</a>
+                </div>
             </li>
 
             <br>
@@ -26,7 +44,9 @@
                 <p>Me gusta porque hace muy buen uso de la música.</p>
                 <img src="https://m.media-amazon.com/images/M/MV5BMzY4NDI3ZGQtOTg0NS00YzllLWI5MTctYWY4NDVlMzEyYmI5XkEyXkFqcGc@._V1_QL75_UX140_CR0,2,140,207_.jpg" alt="Póster de la película Talk to me" width="200px">
                 <br>
-                <a href="https://youtu.be/aLAKJu9aJys?si=WKPuzd7M6wgB2H6k" target="_blank" title="Talk to Me Tráiler">Ver Tráiler<a>
+                <div class="trailer">
+                    <a href="https://youtu.be/aLAKJu9aJys?si=WKPuzd7M6wgB2H6k" target="_blank" title="Talk to Me Tráiler">Ver Tráiler</a>
+                </div>
             </li>
 
             <br>
@@ -37,7 +57,9 @@
                 <p>Me gusta porque me relaciono con las situaciones y es un final real.</p>
                 <img src="https://m.media-amazon.com/images/S/pv-target-images/a03d0faffdd271235f4688b4faced125237d95a551c57cab6785a35086102877.png" alt="Póster de la película Look back" width="200px">
                 <br>
-                <a href="https://youtu.be/wkRR2VUsWfU?si=udmZ0LR5oxaPi_bn" target="_blank" title="Look Back Tráiler">Ver Tráiler<a>
+                <div class="trailer">
+                    <a href="https://youtu.be/wkRR2VUsWfU?si=udmZ0LR5oxaPi_bn" target="_blank" title="Look Back Tráiler">Ver Tráiler</a>
+                </div>
             </li>
         </ol>
     </body>
